--- a/.hintrc
+++ b/.hintrc
@@ -4,5 +4,13 @@
   ],
   "hints": {
     "typescript-config/consistent-casing": "off"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not chrome <= 109",
+    "not ios_saf <= 18",
+    "not safari <= 18",
+    "not samsung <= 25"
+  ]
 }
