--- a/.hintrc
+++ b/.hintrc
@@ -3,7 +3,8 @@
     "development"
   ],
   "hints": {
-    "typescript-config/consistent-casing": "off"
+    "typescript-config/consistent-casing": "off",
+    "compat-api/css": "off"
   },
   "browserslist": [
     "defaults",
